// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pixiv illustDetail:103905962[manga] 1`] = `
{
  "caption": "C101の新刊サンプルです！<br /><br />恋愛アドベンチャーゲーム『あくありうむ。』に登場する「猫」。<br />彼はどんなことを考えていたのか?<br />彼にとって、これはどんな物語だったのか?<br />そういった本編で語られなかった部分を想像で掘り下げたお話です。<br />※本文は『あくありうむ。』のネタバレおよび多少の負傷描写を含みます。苦手な方はご注意ください。<br /><br />【1日目東C-13b/くらうでぃ】でお待ちしています！<br /><br />メロンブックス様にて新刊の事前予約も始まっています！<br />気になる方は是非チェックしてみてください！<br />【<a href="https://www.melonbooks.co.jp/detail/detail.php?product_id=1746005" target='_blank' rel='noopener noreferrer'>https://www.melonbooks.co.jp/detail/detail.php?product_id=1746005</a>】",
  "comment_access_control": 0,
  "create_date": "2022-12-25T18:31:02+09:00",
  "height": 3541,
  "id": 103905962,
  "illust_ai_type": 1,
  "illust_book_style": 0,
  "image_urls": {
    "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2022/12/25/18/31/02/103905962_p0_master1200.jpg",
    "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2022/12/25/18/31/02/103905962_p0_master1200.jpg",
    "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2022/12/25/18/31/02/103905962_p0_square1200.jpg",
  },
  "is_bookmarked": true,
  "is_muted": false,
  "meta_pages": [
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2022/12/25/18/31/02/103905962_p0_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2022/12/25/18/31/02/103905962_p0_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2022/12/25/18/31/02/103905962_p0.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2022/12/25/18/31/02/103905962_p0_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2022/12/25/18/31/02/103905962_p1_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2022/12/25/18/31/02/103905962_p1_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2022/12/25/18/31/02/103905962_p1.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2022/12/25/18/31/02/103905962_p1_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2022/12/25/18/31/02/103905962_p2_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2022/12/25/18/31/02/103905962_p2_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2022/12/25/18/31/02/103905962_p2.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2022/12/25/18/31/02/103905962_p2_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2022/12/25/18/31/02/103905962_p3_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2022/12/25/18/31/02/103905962_p3_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2022/12/25/18/31/02/103905962_p3.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2022/12/25/18/31/02/103905962_p3_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2022/12/25/18/31/02/103905962_p4_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2022/12/25/18/31/02/103905962_p4_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2022/12/25/18/31/02/103905962_p4.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2022/12/25/18/31/02/103905962_p4_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2022/12/25/18/31/02/103905962_p5_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2022/12/25/18/31/02/103905962_p5_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2022/12/25/18/31/02/103905962_p5.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2022/12/25/18/31/02/103905962_p5_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2022/12/25/18/31/02/103905962_p6_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2022/12/25/18/31/02/103905962_p6_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2022/12/25/18/31/02/103905962_p6.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2022/12/25/18/31/02/103905962_p6_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2022/12/25/18/31/02/103905962_p7_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2022/12/25/18/31/02/103905962_p7_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2022/12/25/18/31/02/103905962_p7.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2022/12/25/18/31/02/103905962_p7_square1200.jpg",
      },
    },
  ],
  "meta_single_page": {},
  "page_count": 8,
  "restrict": 0,
  "sanity_level": 2,
  "series": null,
  "tags": [
    {
      "name": "漫画",
      "translated_name": null,
    },
    {
      "name": "C101",
      "translated_name": null,
    },
    {
      "name": "ホロライブ",
      "translated_name": null,
    },
    {
      "name": "VTuber",
      "translated_name": null,
    },
    {
      "name": "バーチャルYouTuber",
      "translated_name": null,
    },
    {
      "name": "湊あくあ",
      "translated_name": null,
    },
    {
      "name": "あくありうむ。",
      "translated_name": null,
    },
  ],
  "title": "【C101】あくあに恋した猫の話",
  "tools": [
    "SAI",
    "CLIP STUDIO PAINT",
  ],
  "type": "manga",
  "user": {
    "account": "borinn0812",
    "id": 8166267,
    "is_followed": false,
    "name": "くらうど",
    "profile_image_urls": {
      "medium": "https://i.pximg.net/user-profile/img/2017/08/25/23/47/25/13106932_2caeb7aa12108a818ebf4d6671caffa6_170.jpg",
    },
  },
  "visible": true,
  "width": 2508,
  "x_restrict": 0,
}
`;

exports[`pixiv illustDetail:107565629[illust] 1`] = `
{
  "caption": "",
  "comment_access_control": 0,
  "create_date": "2023-04-27T13:39:51+09:00",
  "height": 2626,
  "id": 107565629,
  "illust_ai_type": 1,
  "illust_book_style": 0,
  "image_urls": {
    "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2023/04/27/13/39/51/107565629_p0_master1200.jpg",
    "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2023/04/27/13/39/51/107565629_p0_master1200.jpg",
    "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2023/04/27/13/39/51/107565629_p0_square1200.jpg",
  },
  "is_bookmarked": true,
  "is_muted": false,
  "meta_pages": [],
  "meta_single_page": {
    "original_image_url": "https://i.pximg.net/img-original/img/2023/04/27/13/39/51/107565629_p0.png",
  },
  "page_count": 1,
  "restrict": 0,
  "sanity_level": 2,
  "series": null,
  "tags": [
    {
      "name": "バーチャルYouTuber",
      "translated_name": null,
    },
    {
      "name": "ホロライブ",
      "translated_name": null,
    },
    {
      "name": "VTuber",
      "translated_name": null,
    },
    {
      "name": "百鬼あやめ",
      "translated_name": null,
    },
    {
      "name": "大神ミオ",
      "translated_name": null,
    },
    {
      "name": "白上フブキ",
      "translated_name": null,
    },
    {
      "name": "衣装チェンジ",
      "translated_name": null,
    },
    {
      "name": "尊死",
      "translated_name": null,
    },
    {
      "name": "Incredibly",
      "translated_name": null,
    },
    {
      "name": "バーチャルYouTuber1000users入り",
      "translated_name": null,
    },
  ],
  "title": "フブキちゃん衣装着てみたみょ～ん余",
  "tools": [],
  "type": "illust",
  "user": {
    "account": "yukitohoshizora",
    "id": 16668308,
    "is_followed": false,
    "name": "桜もち",
    "profile_image_urls": {
      "medium": "https://i.pximg.net/user-profile/img/2021/10/21/16/01/24/21613958_387e1f6d986a59108e38ac07ce749ba6_170.png",
    },
  },
  "visible": true,
  "width": 1728,
  "x_restrict": 0,
}
`;

exports[`pixiv illustSeries: illust_series_detail 1`] = `
{
  "caption": "ホロライブ学園でのみんなの生活の一幕",
  "cover_image_urls": {
    "medium": "https://i.pximg.net/c/782x410_80_a2_g5/illust-series-cover-original/img/2022/05/25/20/15/50/5XnC1tDrHglYYLxgjDx4sz3ep3e0ryFU.jpg",
  },
  "create_date": "2022-02-20T18:38:14+09:00",
  "height": 900,
  "id": 147483,
  "title": "ホロライブ学パロ",
  "user": {
    "account": "itimi",
    "id": 147203,
    "is_followed": false,
    "name": "いちみ",
    "profile_image_urls": {
      "medium": "https://i.pximg.net/user-profile/img/2019/05/14/22/18/07/15770409_7935f0f46dcaddffd99f325bca49e2d1_170.jpg",
    },
  },
  "watchlist_added": true,
  "width": 710,
}
`;

exports[`pixiv illustSeries: illust_series_first_illust 1`] = `
{
  "caption": "時にはこういう感じも良いなと思いつつ( ˘ω˘ )<br />後半はいろいろラフ画<br />合間合間にまたやったりするやも<br /><br />こっそりとskeb【<a href="https://skeb.jp/@itimi" target='_blank' rel='noopener noreferrer'>https://skeb.jp/@itimi</a>】はじめてました<br /><br />新刊の『あくおかSUMMER』【<strong><a href="pixiv://illusts/92103181">illust/92103181</a></strong>】委託販売中です！ヽ(=´▽\`=)ﾉ<br />今回は全編新規で夏の海のお話です！ﾎﾛﾗｲﾌﾞｻﾏｰｯ<br />購入報告や感想ありがとうございます、励みになります(✿´ ꒳ \` )<br /><br />書店様<br />メロン【<a href="http://bit.ly/1s21HMK" target='_blank' rel='noopener noreferrer'>http://bit.ly/1s21HMK</a> 】<br />とら【<a href="https://goo.gl/f8zmgy" target='_blank' rel='noopener noreferrer'>https://goo.gl/f8zmgy</a> 】<br />Grep【<a href="https://goo.gl/S5Rnvr" target='_blank' rel='noopener noreferrer'>https://goo.gl/S5Rnvr</a> 】<br /><br />電子書籍<br />メロン【<a href="http://bit.ly/1s21HMK" target='_blank' rel='noopener noreferrer'>http://bit.ly/1s21HMK</a> 】<br />DLSite【<a href="http://ur2.link/PyA0" target='_blank' rel='noopener noreferrer'>http://ur2.link/PyA0</a> 】",
  "create_date": "2021-10-27T20:09:10+09:00",
  "height": 900,
  "id": 93720367,
  "illust_ai_type": 0,
  "illust_book_style": 0,
  "image_urls": {
    "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2021/10/27/20/09/10/93720367_p0_master1200.jpg",
    "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2021/10/27/20/09/10/93720367_p0_master1200.jpg",
    "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2021/10/27/20/09/10/93720367_p0_square1200.jpg",
  },
  "is_bookmarked": true,
  "is_muted": false,
  "meta_pages": [
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2021/10/27/20/09/10/93720367_p0_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2021/10/27/20/09/10/93720367_p0_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2021/10/27/20/09/10/93720367_p0.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2021/10/27/20/09/10/93720367_p0_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2021/10/27/20/09/10/93720367_p1_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2021/10/27/20/09/10/93720367_p1_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2021/10/27/20/09/10/93720367_p1.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2021/10/27/20/09/10/93720367_p1_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2021/10/27/20/09/10/93720367_p2_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2021/10/27/20/09/10/93720367_p2_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2021/10/27/20/09/10/93720367_p2.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2021/10/27/20/09/10/93720367_p2_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2021/10/27/20/09/10/93720367_p3_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2021/10/27/20/09/10/93720367_p3_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2021/10/27/20/09/10/93720367_p3.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2021/10/27/20/09/10/93720367_p3_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2021/10/27/20/09/10/93720367_p4_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2021/10/27/20/09/10/93720367_p4_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2021/10/27/20/09/10/93720367_p4.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2021/10/27/20/09/10/93720367_p4_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2021/10/27/20/09/10/93720367_p5_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2021/10/27/20/09/10/93720367_p5_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2021/10/27/20/09/10/93720367_p5.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2021/10/27/20/09/10/93720367_p5_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2021/10/27/20/09/10/93720367_p6_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2021/10/27/20/09/10/93720367_p6_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2021/10/27/20/09/10/93720367_p6.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2021/10/27/20/09/10/93720367_p6_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2021/10/27/20/09/10/93720367_p7_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2021/10/27/20/09/10/93720367_p7_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2021/10/27/20/09/10/93720367_p7.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2021/10/27/20/09/10/93720367_p7_square1200.jpg",
      },
    },
  ],
  "meta_single_page": {},
  "page_count": 8,
  "restrict": 0,
  "sanity_level": 2,
  "series": {
    "id": 147483,
    "title": "ホロライブ学パロ",
  },
  "tags": [
    {
      "name": "漫画",
      "translated_name": null,
    },
    {
      "name": "ホロライブ",
      "translated_name": null,
    },
    {
      "name": "湊あくあ",
      "translated_name": null,
    },
    {
      "name": "あくおか",
      "translated_name": null,
    },
    {
      "name": "猫又おかゆ",
      "translated_name": null,
    },
    {
      "name": "学パロ",
      "translated_name": null,
    },
  ],
  "title": "あくおか学パロまとめ",
  "tools": [
    "SAI",
    "Photoshop",
    "ComicStudio",
  ],
  "type": "manga",
  "user": {
    "account": "itimi",
    "id": 147203,
    "is_followed": false,
    "name": "いちみ",
    "profile_image_urls": {
      "medium": "https://i.pximg.net/user-profile/img/2019/05/14/22/18/07/15770409_7935f0f46dcaddffd99f325bca49e2d1_170.jpg",
    },
  },
  "visible": true,
  "width": 637,
  "x_restrict": 0,
}
`;

exports[`pixiv novelDetail 1`] = `
{
  "caption": "色々と独自解釈、設定捏造があります。<br />張り詰めるものが多いと、人はいつか破裂する。<br /><br />Twitterやってます→【<strong><a href="https://twitter.com/somari1101" target="_blank">twitter/somari1101</a></strong>】",
  "comment_access_control": 0,
  "create_date": "2020-08-22T21:24:48+09:00",
  "id": 13574875,
  "image_urls": {
    "large": "https://i.pximg.net/c/240x480_80/novel-cover-master/img/2020/08/22/21/24/48/13574875_5c3aae3260ca71f457dd4d7f20342edf_master1200.jpg",
    "medium": "https://i.pximg.net/c/176x352/novel-cover-master/img/2020/08/22/21/24/48/13574875_5c3aae3260ca71f457dd4d7f20342edf_master1200.jpg",
    "square_medium": "https://i.pximg.net/c/128x128/novel-cover-master/img/2020/08/22/21/24/48/13574875_5c3aae3260ca71f457dd4d7f20342edf_square1200.jpg",
  },
  "is_bookmarked": true,
  "is_muted": false,
  "is_mypixiv_only": false,
  "is_original": false,
  "is_x_restricted": false,
  "novel_ai_type": 0,
  "page_count": 7,
  "restrict": 0,
  "series": {},
  "tags": [
    {
      "added_by_uploaded_user": true,
      "name": "二次創作",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "ホロライブ",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "hololive",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "VTuber",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "大空スバル",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "姫森ルーナ",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "スバルーナ",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "百合",
      "translated_name": null,
    },
  ],
  "text_length": 6931,
  "title": "それはまるで鍵盤を奏でる細指の如く",
  "user": {
    "account": "user_wrmt2824",
    "id": 53003997,
    "is_followed": false,
    "name": "蘇鞠-そまり-",
    "profile_image_urls": {
      "medium": "https://i.pximg.net/user-profile/img/2020/07/03/22/56/37/18928177_6695a072d51b3261e7cdff407f6bc4fd_170.jpg",
    },
  },
  "visible": true,
  "x_restrict": 0,
}
`;

exports[`pixiv novelSeries: illust_series_first_illust 1`] = `
{
  "caption": "あ〜(^^)",
  "create_date": "2023-05-10T00:24:01+09:00",
  "id": 19854434,
  "image_urls": {
    "large": "https://i.pximg.net/c/240x480_80/novel-cover-master/img/2023/05/10/00/57/44/ci19854434_8d38bde93b0ba03ef57b58b1eaabe029_master1200.jpg",
    "medium": "https://i.pximg.net/c/176x352/novel-cover-master/img/2023/05/10/00/57/44/ci19854434_8d38bde93b0ba03ef57b58b1eaabe029_master1200.jpg",
    "square_medium": "https://i.pximg.net/c/128x128/novel-cover-master/img/2023/05/10/00/57/44/ci19854434_8d38bde93b0ba03ef57b58b1eaabe029_square1200.jpg",
  },
  "is_bookmarked": true,
  "is_muted": false,
  "is_mypixiv_only": false,
  "is_original": false,
  "is_x_restricted": false,
  "novel_ai_type": 1,
  "page_count": 2,
  "restrict": 0,
  "series": {
    "id": 10181799,
    "title": "ゆるししらみ",
  },
  "tags": [
    {
      "added_by_uploaded_user": true,
      "name": "獅白ぼたん",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "雪花ラミィ",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "ししらみ",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "ホロライブ",
      "translated_name": null,
    },
  ],
  "text_length": 1648,
  "title": "頬も空もまだ紅いから",
  "user": {
    "account": "user_utvh7357",
    "id": 70910389,
    "is_access_blocking_user": false,
    "is_followed": false,
    "name": "木々鬼　北",
    "profile_image_urls": {
      "medium": "https://i.pximg.net/user-profile/img/2023/03/09/02/26/38/24127823_63815ee55e41f8e5792e3f09ef132efb_170.jpg",
    },
  },
  "visible": true,
  "x_restrict": 0,
}
`;

exports[`pixiv novelSeries: novel_series_detail 1`] = `
{
  "caption": "1〜5話両思いだけどまだ付き合って無いししらみ。
6話以降はその後の話になります
",
  "display_text": "1〜5話両思いだけどまだ付き合って無いししらみ。
6話以降はその後の話になります
",
  "id": 10181799,
  "is_concluded": false,
  "is_original": false,
  "novel_ai_type": 1,
  "title": "ゆるししらみ",
  "total_character_count": 46673,
  "user": {
    "account": "user_utvh7357",
    "id": 70910389,
    "is_access_blocking_user": false,
    "is_followed": false,
    "name": "木々鬼　北",
    "profile_image_urls": {
      "medium": "https://i.pximg.net/user-profile/img/2023/03/09/02/26/38/24127823_63815ee55e41f8e5792e3f09ef132efb_170.jpg",
    },
  },
  "watchlist_added": true,
}
`;

exports[`pixiv novelSeries: novel_series_first_novel 1`] = `
{
  "caption": "最近お腹を蚊に刺されました。痒いです",
  "create_date": "2023-03-11T01:57:27+09:00",
  "id": 19462426,
  "image_urls": {
    "large": "https://i.pximg.net/c/240x480_80/novel-cover-master/img/2023/03/11/01/57/27/ci19462426_e12a1a3a52a2a4da88c026cd4290073a_master1200.jpg",
    "medium": "https://i.pximg.net/c/176x352/novel-cover-master/img/2023/03/11/01/57/27/ci19462426_e12a1a3a52a2a4da88c026cd4290073a_master1200.jpg",
    "square_medium": "https://i.pximg.net/c/128x128/novel-cover-master/img/2023/03/11/01/57/27/ci19462426_e12a1a3a52a2a4da88c026cd4290073a_square1200.jpg",
  },
  "is_bookmarked": true,
  "is_muted": false,
  "is_mypixiv_only": false,
  "is_original": false,
  "is_x_restricted": false,
  "novel_ai_type": 1,
  "page_count": 2,
  "restrict": 0,
  "series": {
    "id": 10181799,
    "title": "ゆるししらみ",
  },
  "tags": [
    {
      "added_by_uploaded_user": true,
      "name": "獅白ぼたん",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "雪花ラミィ",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "ししらみ",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "尾丸ポルカ",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "桃鈴ねね",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "ホロライブ",
      "translated_name": null,
    },
  ],
  "text_length": 928,
  "title": "ししデレを求めて",
  "user": {
    "account": "user_utvh7357",
    "id": 70910389,
    "is_access_blocking_user": false,
    "is_followed": false,
    "name": "木々鬼　北",
    "profile_image_urls": {
      "medium": "https://i.pximg.net/user-profile/img/2023/03/09/02/26/38/24127823_63815ee55e41f8e5792e3f09ef132efb_170.jpg",
    },
  },
  "visible": true,
  "x_restrict": 0,
}
`;

exports[`pixiv novelText 1`] = `
"　
  どうも最近、頭が重たい。真綿が詰められているような、靄のかかったような、いまいちすっきりしない様子。お陰で今日は部活の指示出しでもミスが多くて、結果的に皆に迷惑をかけてしまう事が多かった。
  
  「寝不足もあってかきっついなぁ」
  
  特に暑くて寝苦しいって訳でもないけど、なんか、寝付けないことが多い。布団に入っても、眠りに就くまで最低でも一時間、ひどい時は朝方まで寝れない。寝れたとしても眠りが浅くて、逆に体が疲れてしまう。
  ちょっと前まではそんなことなかったんだけどなぁ。帰り道をとぼとぼと歩きながら、寝不足の原因を考える。といっても、思い付くものなんてそんなにないんだけど。
  
  どうしたものかと考えていると、携帯が鳴る。誰からだろうと思って携帯を見ると、事務所からの連絡で、今日の打ち合わせに来ないのか、という内容だった。
  
  「あぁ、忘れてた」
  
  普段の自分だったらあり得ないほどの散漫さ。どうも脳の働きまでしっかりとしていない気がして、駄目な気持ちが強くなる。少しだけ自分に嫌気がさすけど、沈んでいても仕方ないので切り替えて、脚を事務所の方へと向ける。
  
  「おっと、その前に返信しなきゃ」
  
  謝りの文章と、今からすぐに向かう旨を送り、早足で事務所へと歩き出す。何かをきっかけに、今の状態が改善されることを願って。
  
[newpage]
  
  事務所に着いて、謝りながら部屋に入ると、心配そうな表情で皆が寄ってくる。大丈夫だよ、と笑顔で伝えて打ち合わせに参加する。次の皆での企画の話をするんだけど、やっぱり今日は脳の調子が良くないみたい。
  皆の言葉を上手く処理できないし、言いたい言葉も口から出てこない。
  
  「えぇっと、あれだよ……あの、何だっけ……なんていうやつだったかな」
  
  今日はもう、ずっとこんな調子。完全に脳の機能が神経に伝達されていない感覚で、歯痒さと情けなさに、いらいらしてしまう。
  
  「スバル、ちょっと休んだ方が良いんじゃないか？　なんか今日ほんと調子悪そうで心配だぞ」
  
  あやめちゃんが心配そうにスバルの元へと駆け寄ってくる。大丈夫と改めて伝えて、申し訳ないけど一度席を外すことにしようとすると、スバルの調子が悪いのもあって、今日の打ち合わせは終了となった。
　
  「ほんと、申し訳ないっス」
  
  スバルが謝ると、あやめちゃんやミオちゃんが「いいからちゃんと治すこと」と念を押して頭を撫でてくれた。申し訳なさが強くて、情けなくて涙が出る。
  用事があるという二人を見送って、少し休むためにスバルは待合室へと行く。誰もいないことを確認し、ソファに座るけど、頭の靄は消えない。体の重たさにも慣れなくて、徐々に体が横になっていく。
  
  「あぁ、しんど」
  
  夜にきちんと眠れない分、少しずつ眠気に襲われだして、今また寝てしまったら夜に寝れなくなりそうで怖くて、抵抗するも空しく、スバルの意識が徐々に深く深くへと沈んでいった。
  
  「ふぅっ！」
  
  なのだけど、耳に突然の刺激が走って、スバルの意識は急上昇させられることになったのだった。
  
[newpage]
  
  「なっ！　なにすんだよ！」
  
  後ろを振り返ってその相手を見ると、悪戯っぽく笑っているルーナがそこにはいた。
  突然起こされた意識と、寝不足と、体の重さに付いていけず、スバルの体はそのままソファへと倒れ込んでいった。
  
  「ちょ、どうしたのら？」
  
  ルーナの心配そうな声が聞こえるけど、目の前が急激に真っ暗になっていく。やばい、このままだったら完全に意識が飛ぶ。自分の腕で支えられなくなった腕が折りたたまれて、頭をそのまま打ち付けそうになった時、ルーナが腕で体を支えてくれる。
  
  「スバルちゃ先輩！　どうしたのら！」
  
  ルーナに抱きかかえられているけど、体に上手く力が入らない。自分の体の重さが、重力を感じすぎて気持ち悪くなってくる。
  
  「ごめん、なんか体が本調子じゃなくて」
  
  最近の体調と、寝付けないことを伝えると、ルーナは少し「んー」と考えて、スバルの帽子を取ってから、少し撫でてくれる。心地よさを感じて、頭の重たさがさらに増幅する。
  
  「スバルちゃ先輩、きっと疲れてるのらね。最近耳の掃除とかできてないのら？」
  
  言われて気付くけど、確かに最近はお風呂上りに、髪の毛も乾かさずに寝ちゃったりしてたなぁ。
  確かにそうかも、と伝えると、ルーナの細くて小さな指が耳たぶを揉んでいる。くすぐったさと気持ち良さが耳から頭を包んでいく。そのまま突然頭がソファに落とされる。
  
  「ちょっと待っててほしいのら」
  
  色々と急なことが起きすぎているのと、まだきちんと頭が働いていないのもあって、自分の中でなにも理解が追い付かず、妙な痺れと、ぼんやりとした思考だけが取り残されていた。
  
  「お待たせなのら。急に動いてごめんなのらよ」
  
  申し訳なさそうに寄ってきて、スバルの横に座る。そしてスバルの頭を持ち上げて、その柔らかい太ももの上に、そっと、優しく乗せてくれた。
  
  「さて、覚悟するのら」
  
  待て待ておい、何する気だてめぇ！
  
[newpage]
  
  スバルの頭を片手で固定して、動かさないようにされる。待って待って、ほんとに怖い！
  
  「何すんだよ！　やめろって、怖ぇよ！」
  
  暴れようとしたスバルの耳に、今度は優しく吐息がかけられる。くすぐったいのと、変な痺れで体の力が抜けていく。
  
  「暴れちゃだめなのらよ。これからスバルちゃ先輩のお耳の中を、ルーナがきれいきれいしてあげるのら」
  
  それなら急に怖い感じでやろうとすんじゃねぇよ、というか、ルーナが耳かきって、それはそれで怖いんだけど……？
  ほんとにちゃんとできるのか聞くと、少しむくれたような声で「疑ってるのら？」と言われる。いや、疑うも何も、どちらかというとお世話されてる側のイメージが強いから。
  
  「はいはい、黙ってないと鼓膜無くなるのらよ」
  
  「それはもう脅迫だろ！」
  
  スバルの叫び声は綺麗に無視されて、そのままどこかへと消えていった。
  ゆっくりと、耳の周りから、濡れたタオルか何かで拭かれている。力加減がちょうど良くて、耳たぶの裏までしっかりと拭かれていく。
   
  「こういうところに結構、汚れが溜まりやすいのら」
  
  小さく鼻息を「ふんす」と鳴らしながら、丁寧に丁寧に、綺麗にされていく。耳たぶ、耳の外側、そして、耳の穴の付近まで綺麗に拭かれた時、ぼんやりと温かく、耳が熱を持つ。
  
  「あぁ、気持ちいい」
  
  「汚れが溜まると血行とかも悪くなるから、それが原因で寝不足になる人だっているのらよ」
  
  耳の外側を全部綺麗に拭かれた後、今度は耳かきがスバルの耳の中に侵入してくる。
  ガサゴソと耳の奥で音が響いて、何かが動き回る感覚が正直くすぐったい。それでもここで暴れようものなら、本当にスバルの鼓膜がなくなりそうなので我慢する。
  
  「あぁ……結構、長い事放置してるのらね」
  
  ルーナの声が少し険しくなる。確かにここ何か月かできてなかったけど、そんなにひどくなるもんなのかな。
  
  「アイドルの耳とは思えねぇのら」
  
  やかましいわ！　と反論したかったけど、耳を人質に取られている以上、大きく声を出せない。くっそこいつ、考えたな。
  
  「ちょっと、集中するから黙ってしまうのら」
  
  その言葉の通り、ルーナが慎重に耳かきを動かしているのがわかる。奥の方でぺりぺりと何かが剥がれていくような音がして、耳の奥が少しむず痒い。
  気持ち良くて「おぉ」と変な声が漏れるけど、ルーナは何の反応もせず、ゆっくりゆっくりとスバルの耳を掃除していく。
  
  「すっごい、気持ちいいよルーナ」
  
  薄い膜が剥がれていく音が少しずつ小さくなって、耳の奥まで一気に風が通ったような感覚になる。
  
  「ぷふぅ……これこっちも緊張するのらね……」
  
  神経を集中させていたのか、呼吸を止めてやってくれていたみたい。
  
  「このまま一気に掻き出すけど、痛かったりしたら言ってほしいのら」
  
  そう言って、ルーナの手が動く。それと同時に耳の奥で、何か大きな塊がゴリゴリと動いているのがわかる。
  その塊が引っ張り出されているのと同時に、さらに奥からぺりっぺりっと膜が剥がれていく音がまたしてきて、奥を掻かれていた時とは違う、爽快感や気持ち良さが襲ってくる。
  
  「おぉ、すっごい……」
  
  一際大きい剥がれる音が耳の奥で聞こえたのと同時に、耳の通りが良くなったのと、頭の靄が少し晴れていく感覚になった。
  
  「ふぅー……大物なのら」
  
  目の前の机にティッシュを広げて、その上に取れたものを置くと、見た限り小指の爪の半分ほどの大きさのものが現れた。
  
  「え、こんなのがスバルの耳に入ってたの？」
  
  呼吸を少し整えているルーナに聞くと、「周りのも一緒に取ったから大きくなって出てきたのらよ」と教えてくれる。
  
  「あとは残った細かいのとか取っていくのら、もうちょっとだけ我慢しててほしいのらよ」
  
  そう言うと、目の前の綿棒を少しローションか何かで湿らせて、耳の中に侵入させていく。
  ひんやりとした感触が耳の中で当たって、体が少しだけびくりと跳ねる。鼓膜の安否が気になって、少しだけ体を硬直させると、ルーナがもう片方の手でスバルの頭を撫でてくれる。
  
  「急にやってごめんね、ちょっとだけ、我慢してほしいのら」
  
  頭を撫でてくれるその手を握って、ルーナの優しさを感じる。耳の奥を綿棒が這いまわって、細かい小さい残りを掬っていく。むず痒い感覚が徐々になくなっていって、感覚や思考がはっきりとしていく。
  
  「よし、あとは」
  
  綿棒を抜き取って、耳かきの反対側にある梵天がふぁさふぁさと耳の外、中で動き回る。
  
  「ほあぁ……」
  
  自分でも間抜けな声が出ている実感があったけど、そのスバルの声を聞いたルーナは吹き出しそうなのを堪えて「くっ……くっ……」と笑いを堪えながら体を震わせている。
  
  「きゅ、急に笑わせるのは、ずるいのら」
  
  そんなつもりは無いんだけどと伝えるけど、多分自分でも同じ状況だったら笑ってしまうだろう。
  
  「はいっ！　これで左耳はおしまいなのら！」
  
  最後に濡れタオルでもう一度拭かれ、片耳を完全に綺麗にしてもらった。頭が冴えるという感覚は何となくわかっていたけど、はっきりと今日はそれが実感できている。
  
  「すげぇすっきりした……。というか、ルーナがこんなに耳かき上手だなんて思ってなくてびっくりだよ」
  
  スバルの言葉にドヤ顔をしながら、鼻をもう一度「ふふん」と鳴らす。これは参ったっスなぁ。
  
  「それじゃあ、今度は反対側をするから、体の向きを変えてほしいのら」
  
  スバルが体を起こそうとすると、頭を押さえて無理矢理向きを変えようとしてくる。おい待て、首が折れる！
  
  「このままこっちに向けばいいのらよ」
  
  「いや、なんかそれは恥ずかしいっていうか、ルーナはいいの？」
  
  スバルの問い掛けに不思議そうな顔をして、そして何かを察したように、悪戯っぽい笑みを浮かべる。
  
  「スバルちゃ先輩、発情期なのら？」
  
  ぶっ飛ばすぞお前。
  
[newpage]
  
  反対側の右耳も、さっきと同じように、まず耳の周りから綺麗にしていってもらう。たださっきよりもルーナの甘い香りが直接スバルの鼻腔をくすぐるからか、さっきとは違う緊張感がスバルを襲う。
  
  「スバルちゃ先輩、リラックスするのら。体がガッチガチになってるのらよ」
  
  耳を拭きながらルーナは言う。いや、ごめん、無理。
  
  「んもう、しょうがないのらねぇ」
  
  そう言うと、ルーナは一度手を止めて、スバルの頭を撫で始める。少しだけ前傾姿勢になっっているからか、ルーナのお腹がさらに近くなるし、その、胸の圧力が近付いてくるのがわかる。
  
  「スバルちゃ先輩はリラックスできてないのらよ。最近特に肩に力が入ってる様子だったし、気張りすぎなのらよ」
  
  ルーナの声が、柔らかく耳に入ってくる。緊張が解けていくのがわかって、頭の中の靄が消えていく。その代わりにぼんやりと熱が籠ってきて、急激な眠気が襲ってくる。
  
  「眠くなってきたのら？　このまま耳の掃除してあげるから、ゆっくりしてていいのらよ？」
  
  甘やかすような声が耳から脳へ。暗い靄は完全に消えてなくなっていって、スバルの瞼は重力に負けていく。
  
  「ごめ、ん……ちょっと寝るかも」
  
  「いいのらよ。ゆーっくりお休みするのら」
  
  耳の中に耳かきが入ってくる感覚が、さらにスバルの眠気を誘って、気持ち良さに浸かって、そのまま眠りに落ちていった。
  
[newpage]
  
  優しい歌声が聞こえる。何の障害もなく耳の奥までその歌声は届いてきて、脳を優しく包んでくれる。
  
  「あ、お目覚めなのら？」
  
  ぼんやりとした視界に最初に入ってきたのは、優しい優しい、ルーナの笑顔だった。
  
  「ん……ごめん、寝ちゃってた」
  
  スバルの頭を撫でながら「いいのらよー」と言って、ルーナはまた鼻歌を歌いだす。さっきの声はルーナの歌声だったのか。
  撫でてくれていた手とは逆の手で、スバルと手を繋いでくれていたみたいで、それもあって安心して眠れていたのかもしれない。
  
  「スバルちゃ先輩はもっと人に甘えてもいいのらよ。ルーナは後輩だから背中追っかけてばっかりなのらけど、スバルちゃ先輩のこと支えることくらいはできるのら」
  
  小さく笑って、ルーナは撫でる手の力を少し強める。髪の毛の間を細い指が通って心地よい。
  後輩に甘え切っているのと、普段のルーナとのギャップが凄くて、スバルは言葉が上手く出ないし、悔しいとか情けないよりも、甘えてもいいという安心感が、スバルの脳みそを支配する。
  
  「まぁ、同期の人たちの方が気兼ねなく話せるっていうのはあるかもしれないのらけどね」
  
  「ルーナにも甘えるよ？　辛くなったら言うね。ほんとにありがとう」
  
  ルーナの困った笑顔を見て、スバルは咄嗟に言葉を紡ぐ。驚いたような顔をして、そしてまた笑顔で「しょうがないのらねぇ！」と言う。
  
  「ほんと、すごい頭がすっきりしたし、疲れとか調子の悪さが無くなったよ。ありがとうねルーナ」
  
  体を起こして、改めてルーナにお礼を言うと、繋いでいた手を離さずに「一緒に帰りたいのら」と言ってくる。その手を強く握って「仕方ないなぁ」と笑って、そのまま事務所を出る。
  
  「ルーナ、今度はスバルが耳かきしてあげるよ」
  
  「え、まだ音を聞いていたいのら」
  
  お前ほんとぶっ飛ばすぞ！
  
[newpage]
  
  眠ってしまったスバルちゃ先輩は、随分と無防備な顔をしているのら。
  
  「疲れてる、というよりも、単純に色んな事に追い詰められてただけみたいなのらね」
  
  この人は知らない、私がどれだけ心配しているかを。どれだけこの人を支えに頑張っているのかを。
  
  どれだけこの人に甘えてしまっているのかを。
  
  「ほーんと、自分のことには鈍感なのら、スバルちゃ先輩は」
  
  誰にも見られていないこと、誰も近くにいないことを念入りに確認して、もっと近くでスバルちゃ先輩の寝顔を眺める。
  普段はいじられて芸人さんみたいなのに、こうして見るとただの、本当にただの可愛らしい少女だ。
  
  「心配かけた罰なのら」
  
  小さく言い訳を呟いて、その頬に唇を落とす。規則正しい寝息が乱れていないことを確認して、高鳴る胸を抑える。
  
  「んふふ」
  
  こんなに甘えてもらえているのが嬉しくて、自分のした行動がびっくりで、気分が良くなって自然と鼻歌が漏れる。
  
  「スバルちゃ先輩のばーか」
  
  空いた手を握って、今のこの空間を、二人だけの空間を楽しむことにした。これは、ルーナへの報酬。"
`;

exports[`pixiv novelText: novel_marker 1`] = `
{
  "page": 4,
}
`;

exports[`pixiv userDetail: profile 1`] = `
{
  "address_id": 19,
  "background_image_url": "https://i.pximg.net/c/1200x600_90_a2_g5/background/img/2023/03/21/18/48/06/16568776_4b20bf2ee729bf13b56f41ea0e461c4f_master1200.jpg",
  "birth": "1990-03-10",
  "birth_day": "03-10",
  "birth_year": 1990,
  "country_code": "",
  "gender": "unknown",
  "is_premium": false,
  "is_using_custom_profile_image": true,
  "job": "IT関係",
  "job_id": 1,
  "pawoo_url": "https://pawoo.net/oauth_authentications/16568776?provider=pixiv",
  "region": "日本 山梨県",
  "total_illust_series": 0,
  "total_illusts": 0,
  "total_manga": 0,
  "total_mypixiv_users": 0,
  "total_novel_series": 0,
  "total_novels": 0,
  "twitter_account": "ihc_amot",
  "twitter_url": "https://twitter.com/ihc_amot",
  "webpage": null,
}
`;

exports[`pixiv userDetail: profile_publicity 1`] = `
{
  "birth_day": "private",
  "birth_year": "private",
  "gender": "private",
  "job": "private",
  "pawoo": false,
  "region": "private",
}
`;

exports[`pixiv userDetail: user 1`] = `
{
  "account": "tomachi_book000",
  "comment": "ASMR・活字中毒オタク。ツイート・いいねなど🔞
ブックマークは定期的に非公開にさせてます。",
  "id": 16568776,
  "is_access_blocking_user": false,
  "is_followed": false,
  "name": "ihcamot",
  "profile_image_urls": {
    "medium": "https://i.pximg.net/user-profile/img/2023/03/21/18/29/17/24183221_2fffeb121fe5fb57711d687c1eed2b8a_170.png",
  },
}
`;

exports[`pixiv userDetail: workspace 1`] = `
{
  "chair": "",
  "comment": "",
  "desk": "",
  "desktop": "",
  "monitor": "",
  "mouse": "",
  "music": "",
  "pc": "",
  "printer": "",
  "scanner": "",
  "tablet": "",
  "tool": "",
  "workspace_image_url": null,
}
`;
